--- a/idea/agenda/appointment.component.scss
+++ b/idea/agenda/appointment.component.scss
@@ -1,6 +1,7 @@
-.appointment {
-  padding-top: 0;
-}
 .tappable {
   cursor: pointer;
+}
+.smallCase {
+  text-transform: none;
+  letter-spacing: normal;
 }
