--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -1,5 +1,10 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="ideaToolbar">
+    <ion-buttons slot="start">
+      <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
+        <ion-icon name="close" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>
       {{
         (appointment.appointmentId ? 'IDEA.AGENDA.APPOINTMENT.APPOINTMENT' : 'IDEA.AGENDA.APPOINTMENT.NEW_APPOINTMENT')
@@ -8,24 +13,47 @@
       <ion-text *ngIf="!userCanEdit">({{ ('IDEA.AGENDA.APPOINTMENT.READ_ONLY' | translate).toLowerCase() }})</ion-text>
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button *ngIf="appointment.appointmentId && userCanEdit" [title]="t._('COMMON.DELETE')" (click)="delete()">
-        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+      <ion-button
+        *ngIf="linkedObjectTypes?.length"
+        [title]="t._('IDEA.AGENDA.APPOINTMENT.LINK_OBJECT')"
+        (click)="linkObject()"
+      >
+        <ion-icon name="link" slot="icon-only"></ion-icon>
       </ion-button>
-      <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
-        <ion-icon name="close" slot="icon-only"></ion-icon>
+      <ion-button
+        *ngIf="calendar.external && appointment.linkToOrigin"
+        [title]="t._('IDEA.AGENDA.APPOINTMENT.OPEN_IN_EXTERNAL_SERVICE')"
+        (click)="extBrowser.openLink(appointment.linkToOrigin)"
+      >
+        <ion-icon [name]="getServiceIcon()" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-button *ngIf="userCanEdit" [title]="t._('COMMON.SAVE')" (click)="save()">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <ion-list [class.viewMode]="!userCanEdit">
-    <ion-list-header *ngIf="calendar.external && appointment.linkToOrigin">
-      <ion-label></ion-label>
-      <ion-button (click)="extBrowser.openLink(appointment.linkToOrigin)">
-        {{ 'IDEA.AGENDA.APPOINTMENT.OPEN_IN' | translate }}
-        <ion-icon [name]="getServiceIcon()" slot="end"></ion-icon>
+  <idea-appointment-linked-object
+    *ngFor="let obj of appointment.linkedTo"
+    [object]="obj"
+    [removeMode]="removeLinkedObjectMode"
+    (remove)="removeLinkedObject(obj)"
+  ></idea-appointment-linked-object>
+  <ion-row>
+    <ion-col class="ion-no-padding ion-text-right">
+      <ion-button
+        fill="clear"
+        color="medium"
+        class="smallCase"
+        *ngIf="appointment.linkedTo?.length"
+        (click)="removeLinkedObjectMode = !removeLinkedObjectMode"
+      >
+        {{ (removeLinkedObjectMode ? 'COMMON.DONE' : 'IDEA.AGENDA.APPOINTMENT.REMOVE_LINKED_OBJECT') | translate }}
       </ion-button>
-    </ion-list-header>
+    </ion-col>
+  </ion-row>
+  <ion-list [class.viewMode]="!userCanEdit">
     <ion-item
       *ngIf="userCanSeeDetails"
       [lines]="userCanEdit ? 'full' : 'inset'"
@@ -114,12 +142,13 @@
         [(ngModel)]="appointment.description"
       ></ion-textarea>
     </ion-item>
+    <ion-button
+      fill="clear"
+      *ngIf="appointment.appointmentId && userCanEdit"
+      [title]="t._('COMMON.DELETE')"
+      (click)="delete()"
+    >
+      <ion-icon name="trash-outline" slot="icon-only" color="danger"></ion-icon>
+    </ion-button>
   </ion-list>
 </ion-content>
-<ion-footer *ngIf="userCanEdit">
-  <ion-toolbar class="ideaToolbar tappable" [title]="t._('COMMON.SAVE')" (click)="save()">
-    <ion-title class="ion-text-center">
-      <ion-icon name="checkmark"></ion-icon>
-    </ion-title>
-  </ion-toolbar>
-</ion-footer>
