Improved agenda (firstSync, startHour)

--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -160,6 +160,7 @@
         [locale]="t.getCurrentLang()"
         [startingDayMonth]="t.getCurrentLang() === 'it' ? 1 : 0"
         [startingDayWeek]="t.getCurrentLang() === 'it' ? 1 : 0"
+        [scrollToHour]="9"
         [formatWeekTitle]="formatWeekTitle"
         [formatDayTitle]="formatDayTitle"
         [formatHourColumn]="formatHourColumn"
