--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -15,10 +15,17 @@
     <ion-buttons slot="end">
       <ion-button
         *ngIf="linkedObjectTypes?.length"
+        [title]="t._('IDEA.AGENDA.APPOINTMENT.CREATE_LINKED_OBJECT')"
+        (click)="createLinkedObject()"
+      >
+        <ion-icon name="add-circle" slot="icon-only"></ion-icon>
+      </ion-button>
+      <ion-button
+        *ngIf="linkedObjectTypes?.length"
         [title]="t._('IDEA.AGENDA.APPOINTMENT.LINK_OBJECT')"
         (click)="linkObject()"
       >
-        <ion-icon name="link" slot="icon-only"></ion-icon>
+        <ion-icon name="document-attach" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button
         *ngIf="calendar.external && appointment.linkToOrigin"
@@ -27,6 +34,7 @@
       >
         <ion-icon [name]="getServiceIcon()" slot="icon-only"></ion-icon>
       </ion-button>
+      <ion-button [disabled]="true"><!-- space --></ion-button>
       <ion-button *ngIf="userCanEdit" [title]="t._('COMMON.SAVE')" (click)="save()">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
@@ -38,7 +46,7 @@
     *ngFor="let obj of appointment.linkedTo"
     [object]="obj"
     [removeMode]="removeLinkedObjectMode"
-    (remove)="removeLinkedObject(obj)"
+    (remove)="removeLinkedObject(obj, $event)"
   ></idea-appointment-linked-object>
   <ion-row>
     <ion-col class="ion-no-padding ion-text-right">
@@ -136,7 +144,7 @@
         {{ 'IDEA.AGENDA.APPOINTMENT.DESCRIPTION' | translate }}
       </ion-label>
       <ion-textarea
-        [rows]="3"
+        [rows]="5"
         [placeholder]="t._('IDEA.AGENDA.APPOINTMENT.DESCRIPTION_HINT')"
         [disabled]="!userCanEdit"
         [(ngModel)]="appointment.description"
