--- a/idea/agenda/appointment.component.html
+++ b/idea/agenda/appointment.component.html
@@ -14,14 +14,14 @@
     </ion-title>
     <ion-buttons slot="end">
       <ion-button
-        *ngIf="linkedObjectTypes?.length"
+        *ngIf="userCanEdit && linkedObjectTypes?.length"
         [title]="t._('IDEA.AGENDA.APPOINTMENT.CREATE_LINKED_OBJECT')"
         (click)="createLinkedObject()"
       >
         <ion-icon name="add-circle" slot="icon-only"></ion-icon>
       </ion-button>
       <ion-button
-        *ngIf="linkedObjectTypes?.length"
+        *ngIf="userCanEdit && linkedObjectTypes?.length"
         [title]="t._('IDEA.AGENDA.APPOINTMENT.LINK_OBJECT')"
         (click)="linkObject()"
       >
