Take picture for attachments

--- a/idea/attachments/attachments.component.html
+++ b/idea/attachments/attachments.component.html
@@ -64,6 +64,15 @@
 <!----->
 <ion-item lines="none" class="selectable" *ngIf="editMode" (click)="browseFiles()">
   <ion-label color="medium">{{ 'IDEA.ATTACHMENTS.ADD_ATTACHMENT' | translate }}</ion-label>
-  <input id="attachmentPicker" type="file" multiple style="display: none;" (change)="addAttachment($event)" />
-  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="editMode" [class.selectable]="editMode"></ion-icon>
+  <input id="attachmentPicker" type="file" multiple style="display: none;" (change)="addAttachmentFromFile($event)" />
+  <ion-icon slot="end" name="caret-down" class="selectIcon" *ngIf="editMode"></ion-icon>
+  <ion-button
+    slot="end"
+    fill="clear"
+    color="dark"
+    *ngIf="editMode && platform.is('capacitor')"
+    (click)="takePictureAndAttach($event)"
+  >
+    <ion-icon slot="icon-only" name="camera"></ion-icon>
+  </ion-button>
 </ion-item>
