--- a/idea/labeler/labeler.component.scss
+++ b/idea/labeler/labeler.component.scss
@@ -17,3 +17,8 @@ ion-list {
     }
   }
 }
+p.explanation {
+  margin: 15px 12px 20px 12px;
+  font-size: 0.9em;
+  color: var(--ion-color-dark-tint);
+}
