Changed modals style

--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button color="light" [title]="t._('COMMON.CLOSE')" (click)="close()">
