--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.CHECKER.CLOSE_WITHOUT_SELECTING')" (click)="cancel()">
