--- a/idea/list/list.component.html
+++ b/idea/list/list.component.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ title || ('IDEA.LIST.LIST' | translate) }}
