--- a/idea/subscription/stripeSubscription.component.html
+++ b/idea/subscription/stripeSubscription.component.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ 'IDEA.STRIPE.SUBSCRIBE' | translate }}
