--- a/idea/subscription/subscription.component.html
+++ b/idea/subscription/subscription.component.html
@@ -1,4 +1,4 @@
-<ion-header class="ion-no-border">
+<ion-header>
   <ion-toolbar class="ideaToolbar">
     <ion-title>
       {{ 'IDEA.SUBSCRIPTION.MANAGE_SUBSCRIPTION' | translate }}
