Added label to RCConfigurator

--- a/idea/resourceCenter/RCConfigurator.component.html
+++ b/idea/resourceCenter/RCConfigurator.component.html
@@ -1,6 +1,7 @@
 <idea-select
   [data]="foldersSuggestions"
   [description]="folder?.name || t._('IDEA.RESOURCE_CENTER.NO_FOLDER_SELECTED')"
+  [label]="label"
   [placeholder]="t._('IDEA.RESOURCE_CENTER.SELECT_FOLDER')"
   [searchPlaceholder]="t._('IDEA.RESOURCE_CENTER.SELECT_FOLDER')"
   [lines]="lines"
