--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -1,71 +1,68 @@
 <ion-header>
   <ion-toolbar class="ideaToolbar">
+    <ion-buttons slot="start">
+      <ion-button (click)="close()">
+        <ion-icon name="close" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>
       {{ 'IDEA.OFFLINE.OFFLINE_MANAGER' | translate }}
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button slot="icon-only" color="light" (click)="close()">
-        <ion-icon name="close"></ion-icon>
+      <ion-button [title]="t._('IDEA.OFFLINE.ADVANCED_ACTIONS')" (click)="actions()">
+        <ion-icon slot="icon-only" name="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-list class="offlineList" lines="none">
-    <ion-list-header *ngIf="offline.requiresManualConfirmation">
+  <ion-list class="aList" lines="none">
+    <ion-list-header *ngIf="!offline.synchronizing && offline.requiresManualConfirmation">
       <ion-label>
-        {{ 'IDEA.OFFLINE.HUGE_SYNC_NEED_MANUAL_CONFIRMATION' | translate }}
+        <h2>{{ 'IDEA.OFFLINE.HUGE_SYNC_NEED_MANUAL_CONFIRMATION' | translate }}</h2>
       </ion-label>
     </ion-list-header>
     <ion-list-header *ngIf="!offline.synchronizing">
-      <ion-label>
-        {{ 'IDEA.OFFLINE.LAST_SYNC' | translate }}:
-        <ion-text class="lastSyncAt">
-          {{ getLastSyncLabel() || ('IDEA.OFFLINE.LOADING' | translate) }}
-        </ion-text>
+      <ion-label class="ion-text-wrap">
+        <h3 class="lastSyncAt">
+          {{ 'IDEA.OFFLINE.LAST_SYNC' | translate }}:
+          <ion-text>{{ getLastSyncLabel() }}</ion-text>
+        </h3>
+        <p class="error" *ngIf="offline.errorInLastSync">{{ 'IDEA.OFFLINE.ERROR_DURING_LAST_SYNC' | translate }}</p>
       </ion-label>
       <ion-button
         size="small"
-        [color]="offline.errorInLastSync ? 'danger' : 'primary'"
+        fill="solid"
+        [color]="offline.errorInLastSync ? 'danger' : 'dark'"
         [disabled]="offline.isOffline()"
         (click)="offline.synchronize(true)"
       >
-        <ion-icon slot="start" name="sync"></ion-icon>
-        {{ 'IDEA.OFFLINE.SYNC_NOW' | translate }}
+        <ion-icon slot="start" name="sync"></ion-icon> {{ 'IDEA.OFFLINE.SYNC_NOW' | translate }}
       </ion-button>
-      <p ion-text color="danger" *ngIf="offline.errorInLastSync">
-        {{ 'IDEA.OFFLINE.ERROR_DURING_LAST_SYNC' | translate }}
-      </p>
     </ion-list-header>
   </ion-list>
-  <ion-list class="offlineList" lines="none" *ngIf="offline.synchronizing">
+  <ion-list class="aList" lines="none" *ngIf="offline.synchronizing">
     <ion-item>
       <ion-label class="ion-text-center">
         <ion-spinner name="crescent" color="primary"></ion-spinner>
       </ion-label>
     </ion-item>
   </ion-list>
-  <ion-list class="offlineList" lines="none" *ngIf="offline.useQueueAPIRequests">
+  <ion-list class="aList" lines="none" *ngIf="offline.useQueueAPIRequests">
     <ion-list-header>
       <ion-label>
-        {{ 'IDEA.OFFLINE.UPLOAD' | translate }}
-        <p>
-          {{ 'IDEA.OFFLINE.UPLOAD_QUEUE_REQUESTS_EXPLANATION' | translate }}
-        </p>
+        <h2>{{ 'IDEA.OFFLINE.UPLOAD' | translate }}</h2>
+        <p>{{ 'IDEA.OFFLINE.UPLOAD_QUEUE_REQUESTS_EXPLANATION' | translate }}</p>
       </ion-label>
     </ion-list-header>
     <ion-item *ngIf="!offline.queueAPIRequests.length">
-      <i>
-        {{ 'IDEA.OFFLINE.NO_ELEMENTS_TO_UPLOAD' | translate }}
-      </i>
+      <i>{{ 'IDEA.OFFLINE.NO_ELEMENTS_TO_UPLOAD' | translate }}</i>
       <ion-icon slot="end" size="small" name="checkmark" color="success"></ion-icon>
     </ion-item>
     <ion-item *ngFor="let r of offline.queueAPIRequests; let odd = odd" [class.oddItem]="odd">
       <ion-label>
         {{ r.description }}
-        <p ion-text color="danger" *ngIf="r.error">
-          {{ r.error }}
-        </p>
+        <p class="error" *ngIf="r.error">{{ r.error }}</p>
       </ion-label>
       <ion-badge slot="end" color="danger" *ngIf="r.error" [title]="t._('IDEA.OFFLINE.REQUEST_FAILED')">
         !
@@ -76,45 +73,16 @@
       <ion-spinner slot="end" name="dots" *ngIf="offline.synchronizing"></ion-spinner>
     </ion-item>
   </ion-list>
-  <ion-list class="offlineList" lines="none" *ngIf="offline.resourcesToCache.length">
+  <ion-list class="aList" lines="none" *ngIf="offline.resources.length">
     <ion-list-header>
       <ion-label>
-        {{ 'IDEA.OFFLINE.DOWNLOAD' | translate }}
-        <p>
-          {{ 'IDEA.OFFLINE.DOWNLOAD_RESOURCES_EXPLANATION' | translate }}
-        </p>
+        <h2>{{ 'IDEA.OFFLINE.DOWNLOAD' | translate }}</h2>
+        <p>{{ 'IDEA.OFFLINE.DOWNLOAD_RESOURCES_EXPLANATION' | translate }}</p>
       </ion-label>
     </ion-list-header>
-    <ion-item *ngFor="let r of offline.resourcesToCache; let odd = odd" [class.oddItem]="odd">
-      <ion-label>
-        {{ r.description }}
-        <p *ngIf="(offline.synchronizing || offline.requiresManualConfirmation) && r.getNumElementsToCache()">
-          {{ 'IDEA.OFFLINE.NUM_ELEMENTS_TO_CACHE' | translate: { num: r.getNumElementsToCache() } }}
-        </p>
-      </ion-label>
-      <ion-badge
-        slot="end"
-        color="danger"
-        *ngIf="!r.synchronizing && r.error"
-        [title]="t._('IDEA.OFFLINE.ONE_OF_THE_UPLOADS_FAILED')"
-      >
-        !
-      </ion-badge>
-      <ion-icon
-        slot="end"
-        size="small"
-        name="checkmark"
-        color="success"
-        *ngIf="!r.synchronizing && !r.error"
-      ></ion-icon>
-      <ion-spinner slot="end" name="dots" *ngIf="r.synchronizing && !offline.requiresManualConfirmation"></ion-spinner>
-      <ion-icon
-        slot="end"
-        size="small"
-        name="stop-circle"
-        color="dark"
-        *ngIf="r.synchronizing && offline.requiresManualConfirmation"
-      ></ion-icon>
-    </ion-item>
+    <idea-cacheable-resource
+      *ngFor="let r of offline.getResources()"
+      [resource]="offline.getCacheableResource(r)"
+    ></idea-cacheable-resource>
   </ion-list>
 </ion-content>
