--- a/idea/offline/offlineManager.component.scss
+++ b/idea/offline/offlineManager.component.scss
@@ -1,40 +1,11 @@
-.offlineList {
+.aList {
   max-width: 500px;
   margin: 0 auto;
-  margin-bottom: 10px;
-  ion-list-header {
-    margin: 0;
-    border-top: none;
-    padding-left: 10px;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 0.75em;
-    color: var(--ion-color-dark);
-    p {
-      padding-top: 5px;
-      white-space: normal;
-      text-transform: none;
-      font-weight: normal;
-      font-style: italic;
-      color: var(--ion-text-color-light);
-    }
-    .lastSyncAt {
-      padding-left: 5px;
-      font-weight: normal;
-      text-transform: none;
-      font-size: 1.1em;
-    }
+  h3.lastSyncAt {
+    margin-top: 6px;
   }
-  ion-list-header:first-of-type {
-    height: 48px; // to avoid resizing based on the content
-  }
-  ion-item {
-    --ion-background-color: white;
-    --inner-border-width: 0;
-    --border-width: 0;
-    height: 48x; // to avoid resizing based on the content
-  }
-  ion-item.oddItem {
-    --ion-background-color: #fafafa;
+  .error {
+    color: var(--ion-color-danger);
+    font-weight: 500;
   }
 }
