Better documentation for OfflineData service

--- a/idea/offline/offlineManager.component.html
+++ b/idea/offline/offlineManager.component.html
@@ -16,7 +16,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-list class="aList" lines="none">
+  <ion-list class="aList padding" lines="none">
     <ion-list-header *ngIf="!offline.synchronizing && offline.requiresManualConfirmation">
       <ion-label>
         <h2>{{ 'IDEA.OFFLINE.HUGE_SYNC_NEED_MANUAL_CONFIRMATION' | translate }}</h2>
