--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -21,19 +21,23 @@
 <ion-content>
   <ion-list class="signatureList">
     <ion-list-header>
-      <ion-label>
-        {{ 'IDEA.SIGNATURE.SIGNATORY' | translate }}
-      </ion-label>
+      <ion-label>{{ 'IDEA.SIGNATURE.SIGNATORY' | translate }}</ion-label>
     </ion-list-header>
-    <ion-item lines="inset" [class.fieldHasError]="signatoryError">
-      <ion-input [placeholder]="t._('IDEA.SIGNATURE.NAME_AND_SURNAME')" [(ngModel)]="signature.signatory"></ion-input>
-    </ion-item>
+    <idea-select
+      [data]="contactsSuggestions"
+      [lines]="'none'"
+      [description]="signature.signatory"
+      [placeholder]="t._('IDEA.SIGNATURE.NAME_AND_SURNAME')"
+      [searchPlaceholder]="t._('IDEA.SIGNATURE.CHOOSE_OR_ADD_A_SIGNATORY')"
+      [noElementsFoundText]="t._('IDEA.SIGNATURE.NO_SIGNATORY_FOUND_YOU_CAN_ADD_ONE')"
+      [allowUnlistedValues]="true"
+      [class.fieldHasError]="signatoryError"
+      (select)="$event ? (signature.signatory = $event.value) : null"
+    ></idea-select>
   </ion-list>
   <ion-list class="signatureList">
     <ion-list-header>
-      <ion-label>
-        {{ 'IDEA.SIGNATURE.SIGNATURE_EXPLANATION' | translate }}
-      </ion-label>
+      <ion-label>{{ 'IDEA.SIGNATURE.SIGNATURE_EXPLANATION' | translate }}</ion-label>
     </ion-list-header>
     <div class="canvasContainer" [class.fieldHasError]="signatureError">
       <canvas id="signatureCanvas"></canvas>
