--- a/idea/agenda/calendarItem.component.scss
+++ b/idea/agenda/calendarItem.component.scss
@@ -1,5 +1,5 @@
 .calendarItem {
-  --background: white;
+  --background: var(--ion-color-white);
   --border-color: #eee;
   ion-avatar {
     width: 25px;
