--- a/idea/attachments/attachments.component.html
+++ b/idea/attachments/attachments.component.html
@@ -16,6 +16,7 @@
   </ion-button>
   <ion-icon
     slot="start"
+    color="medium"
     *ngIf="!editMode && att.attachmentId"
     [name]="getFormatIcon(att.format)"
     [title]="att.format"
