--- a/idea/subscription/stripeSubscription.component.scss
+++ b/idea/subscription/stripeSubscription.component.scss
@@ -16,7 +16,7 @@ ion-list {
     border-radius: 5px;
   }
   #cardElement {
-    background: white;
+    background: var(--ion-color-white);
     padding: 15px 20px;
     font-size: 1em;
   }
