--- a/idea/agenda/agenda.component.scss
+++ b/idea/agenda/agenda.component.scss
@@ -14,7 +14,7 @@ ion-spinner {
 }
 .appointment {
   --min-height: 70px;
-  --ion-background-color: white !important;
+  --ion-background-color: var(--ion-color-white) !important;
   --border-color: #eee;
   font-size: 1em;
   ion-avatar {
