--- a/idea/agenda/calendarCreation.component.html
+++ b/idea/agenda/calendarCreation.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-buttons slot="start">
       <ion-button
         color="light"
