--- a/idea/auth/auth.scss
+++ b/idea/auth/auth.scss
@@ -8,7 +8,7 @@
   margin-left: 10px;
   margin-right: 10px;
   padding: 20px;
-  background-color: white;
+  background-color: var(--ion-color-white);
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: none;
