--- a/idea/checker/checks.component.html
+++ b/idea/checker/checks.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.CHECKER.CLOSE_WITHOUT_SELECTING')" (click)="cancel()">
         <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
