--- a/idea/dateTime/calendarPicker.component.html
+++ b/idea/dateTime/calendarPicker.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-title>
       {{ title }}
     </ion-title>
@@ -136,7 +136,7 @@
   </ion-grid>
 </ion-content>
 <ion-footer>
-  <ion-toolbar class="ideaToolbar tappable" (click)="save()">
+  <ion-toolbar color="ideaToolbarColor" class="tappable" (click)="save()">
     <ion-title class="ion-text-center">
       <ion-icon name="checkmark"></ion-icon>
     </ion-title>
