--- a/idea/icons/icons.component.html
+++ b/idea/icons/icons.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-buttons slot="start">
       <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
