--- a/idea/signature/signature.component.html
+++ b/idea/signature/signature.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="ideaToolbar">
+  <ion-toolbar color="ideaToolbarColor">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.SIGNATURE.CANCEL')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
@@ -52,7 +52,7 @@
     <ion-row>
       <ion-col class="ion-text-right">
         <ion-button fill="clear" [title]="t._('IDEA.SIGNATURE.CLEAR_SIGNATURE')" (click)="clear()">
-          <ion-icon name="trash" slot="icon-only"></ion-icon>
+          <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-col>
     </ion-row>
