--- a/idea/signature/signature.component.scss
+++ b/idea/signature/signature.component.scss
@@ -7,7 +7,7 @@
   .canvasContainer {
     margin: 0 auto;
     text-align: center;
-    background: #fafafa;
+    background: var(--ion-color-white);
     #signatureCanvas {
       width: 100%;
       height: 250px;
