--- a/idea/teams/memberships.page.scss
+++ b/idea/teams/memberships.page.scss
@@ -12,7 +12,7 @@
     margin: 0 10px 20px 10px;
   }
   ion-item {
-    --background: white;
+    --background: var(--ion-color-white);
     --border-color: #eee;
   }
 }
