--- a/idea/select/suggestions.component.html
+++ b/idea/select/suggestions.component.html
@@ -17,11 +17,21 @@
       </ion-button>
     </ion-buttons>
     <div class="categoriesFilters" *ngIf="showCategoriesFilters">
-      <ion-button *ngIf="activeCategories1?.size" [class.strong]="category1" (click)="setFilterCategoryN(1)">
+      <ion-button
+        *ngIf="activeCategories1?.size"
+        color="light"
+        [class.strong]="category1"
+        (click)="setFilterCategoryN(1)"
+      >
         <ion-icon [name]="category1 ? 'filter' : 'filter-outline'" slot="start"></ion-icon>
         {{ category1 || ('IDEA.SELECT.TAP_TO_FILTER' | translate) }}
       </ion-button>
-      <ion-button *ngIf="activeCategories2?.size" [class.strong]="category2" (click)="setFilterCategoryN(2)">
+      <ion-button
+        *ngIf="activeCategories2?.size"
+        color="light"
+        [class.strong]="category2"
+        (click)="setFilterCategoryN(2)"
+      >
         <ion-icon [name]="category2 ? 'filter' : 'filter-outline'" slot="start"></ion-icon>
         {{ category2 || ('IDEA.SELECT.TAP_TO_FILTER' | translate) }}
       </ion-button>
