Fixed margins components

--- a/idea/account/account.page.scss
+++ b/idea/account/account.page.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   ion-item {
     --background: var(--ion-color-white);
-    --border-color: #eee;
+    --border-color: var(--ion-color-light);
   }
 }
 .disruptive {
