--- a/idea/select/select.component.scss
+++ b/idea/select/select.component.scss
@@ -23,7 +23,7 @@
   .selectIcon {
     padding-top: 25px;
   }
-  ion-icon[slot='start'] {
+  ion-button[slot='start'] {
     margin-top: 16px;
   }
 }
