--- a/idea/labeler/labeler.component.html
+++ b/idea/labeler/labeler.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('COMMON.CANCEL')" (click)="close()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
