--- a/idea/mde/mde.component.html
+++ b/idea/mde/mde.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.MDE.CLOSE_WITHOUT_SAVING')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
