--- a/idea/customFields/customSectionMeta.component.html
+++ b/idea/customFields/customSectionMeta.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.CUSTOM_FIELDS.CLOSE_WITHOUT_SAVING')" (click)="close()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
