--- a/idea/list/listElements.component.html
+++ b/idea/list/listElements.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
       <ion-button [title]="t._('IDEA.LIST.CANCEL_AND_CLOSE')" (click)="close()">
         <ion-icon slot="icon-only" name="chevron-down"></ion-icon>
