--- a/idea/subscription/subscription.component.html
+++ b/idea/subscription/subscription.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="ideaToolbarColor">
+  <ion-toolbar color="ideaToolbar">
     <ion-title>
       {{ 'IDEA.SUBSCRIPTION.MANAGE_SUBSCRIPTION' | translate }}
     </ion-title>
