--- a/idea/account/account.page.scss
+++ b/idea/account/account.page.scss
@@ -1,6 +1,7 @@
 .account {
   max-width: 500px;
   margin: 0 auto;
+  background: transparent;
   ion-item {
     --background: var(--ion-color-white);
     --border-color: var(--ion-color-light);
