--- a/idea/auth/auth.scss
+++ b/idea/auth/auth.scss
@@ -35,6 +35,7 @@
       border-left: 2px solid var(--ion-color-danger);
     }
     ion-item {
+      --ion-item-background: var(--ion-color-white);
       --border-color: var(--ion-color-light);
     }
     ion-icon {
