--- a/idea/agenda/agenda.component.html
+++ b/idea/agenda/agenda.component.html
@@ -80,9 +80,15 @@
   <ion-row>
     <ion-col>
       <ng-template #monthviewEventDetailTemplate let-showEventDetail="showEventDetail" let-selectedDate="selectedDate">
-        <ion-list lines="full" has-bouncing="false" overflow-scroll="false" *ngIf="showEventDetail">
+        <ion-list
+          class="dayViewAppointmentsList"
+          lines="full"
+          has-bouncing="false"
+          overflow-scroll="false"
+          *ngIf="showEventDetail"
+        >
           <ion-item
-            class="appointment"
+            class="dayViewAppointment"
             *ngFor="let event of selectedDate?.events"
             [button]="true"
             (click)="onAppointmentSelected(event)"
@@ -105,7 +111,7 @@
               <p>{{ event.location }}</p>
             </ion-label>
           </ion-item>
-          <ion-item *ngIf="selectedDate?.events.length == 0">
+          <ion-item class="dayViewAppointment" *ngIf="selectedDate?.events.length == 0">
             <div class="no-events-label">{{ 'IDEA.AGENDA.NO_EVENTS' | translate }}</div>
           </ion-item>
         </ion-list>
