--- a/idea/agenda/agenda.component.scss
+++ b/idea/agenda/agenda.component.scss
@@ -12,10 +12,14 @@ ion-spinner {
   vertical-align: middle;
   padding-right: 10px;
 }
-.appointment {
+.dayViewAppointmentsList {
+  background: transparent;
+  margin-top: 20px;
+}
+.dayViewAppointment {
   --min-height: 70px;
-  --ion-background-color: var(--ion-color-white) !important;
-  --border-color: #eee;
+  --background: transparent !important;
+  --border-color: var(--ion-color-light);
   font-size: 1em;
   ion-avatar {
     --border-radius: 0;
