--- a/idea/agenda/calendar.component.html
+++ b/idea/agenda/calendar.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button color="light" [title]="t._('COMMON.CLOSE')" (click)="close()">
+      <ion-button [title]="t._('COMMON.CLOSE')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -9,7 +9,7 @@
       {{ 'IDEA.AGENDA.CALENDARS.EDIT_CALENDAR' | translate }}
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button color="light" [title]="t._('COMMON.SAVE')" (click)="save()">
+      <ion-button [title]="t._('COMMON.SAVE')" (click)="save()">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
