--- a/idea/agenda/calendar.component.scss
+++ b/idea/agenda/calendar.component.scss
@@ -1,6 +1,7 @@
 .attributesList {
-  max-width: 500px;
+  max-width: 550px;
   margin: 0 auto;
+  background: transparent;
   ion-list-header {
     padding-left: 10px;
     ion-label {
@@ -10,10 +11,11 @@
   }
   ion-avatar {
     .circle {
-      height: 100%;
-      width: 100%;
+      height: 25px;
+      width: 25px;
       background-color: #555;
       border-radius: 50%;
+      margin: 8px 0 0 16px;
     }
   }
 }
