--- a/idea/agenda/calendarCreation.component.html
+++ b/idea/agenda/calendarCreation.component.html
@@ -1,15 +1,10 @@
 <ion-header>
   <ion-toolbar color="ideaToolbar">
     <ion-buttons slot="start">
-      <ion-button
-        color="light"
-        *ngIf="!calendar.userId && !calendar.teamId"
-        [title]="t._('COMMON.CLOSE')"
-        (click)="close()"
-      >
+      <ion-button *ngIf="!calendar.userId && !calendar.teamId" [title]="t._('COMMON.CLOSE')" (click)="close()">
         <ion-icon name="close" slot="icon-only"></ion-icon>
       </ion-button>
-      <ion-button color="light" *ngIf="calendar.userId || calendar.teamId" (click)="resetScope()">
+      <ion-button *ngIf="calendar.userId || calendar.teamId" (click)="resetScope()">
         <ion-icon name="arrow-back" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
