--- a/idea/agenda/calendarCreation.component.scss
+++ b/idea/agenda/calendarCreation.component.scss
@@ -1,5 +1,5 @@
 ion-content {
-  --ion-background-color: #f4f4f4;
+  --background: var(--ion-color-white-shade);
 }
 .choiceGrid {
   ion-row {
@@ -7,13 +7,11 @@ ion-content {
       > h1 {
         margin: 10px 0 0 0;
         font-size: 1.1em;
-        font-weight: 300;
       }
       > p {
         margin-top: 0;
         margin-bottom: 0;
         font-size: 0.9em;
-        font-weight: 300;
       }
     }
   }
@@ -21,7 +19,7 @@ ion-content {
     padding-bottom: 25px;
   }
   ion-card {
-    --background: var(--ion-color-white);
+    --ion-item-background: var(--ion-color-white);
     --color: var(--ion-color-dark-tint);
     height: 240px;
     margin: 0 auto;
@@ -35,7 +33,6 @@ ion-content {
     ion-card-content {
       h1 {
         font-size: 1.4em;
-        font-weight: 300;
         height: 60px;
       }
     }
