--- a/idea/address/address.component.scss
+++ b/idea/address/address.component.scss
@@ -1,3 +1,6 @@
-.addressDetails {
-  margin-left: 20px;
+.addressDetails ion-item {
+  --padding-start: 30px;
+}
+.marginTop {
+  margin-top: 14px;
 }
